[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dimo-python-sdk"
version = "1.1.1"
authors = [
  { name="Barrett Kowalsky", email="barrettkowalsky@gmail.com" },
]
description = "DIMO SDK in Python"
readme = "README.md"
requires-python = ">=3.8"
keywords=["dimo", "sdk", "python", "depin", "web3"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "eth-account==0.13.4",
    "eth-utils==4.1.1",
    "httpx>=0.28.1",
    "orjson>=3.10.14",
    "gql[httpx]>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/DIMO-Network/dimo-python-sdk"
Issues = "https://github.com/DIMO-Network/dimo-python-sdk/issues"

[tool.rye]
dev-dependencies = [
    "aiohttp>=3.11.11",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]
